few changes in hover

--- a/landing_page.html
+++ b/landing_page.html
@@ -40,40 +40,40 @@
             <div class="dropdown_content display_flex">
                 <div>
                     <div>Subscription Management</div>
-                    <div id="over">Overview</div>
-                    <div id="creat">Create & Manage Plans</div>
-                    <div id="prici">Pricing Management</div>
-                    <div id="hand">Handle Trial Subscriptions</div>
-                    <div id="cssp">Customer Self-service Portal</div>
-                    <div id="ms">Mobile Solutions</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Create & Manage Plans</div>
+                    <div class="hover">Pricing Management</div>
+                    <div class="hover">Handle Trial Subscriptions</div>
+                    <div class="hover">Customer Self-service Portal</div>
+                    <div class="hover">Mobile Solutions</div>
                 </div>
                 <div>
                     <div>Billing Automation</div>
-                    <div id="ovr">Overview</div>
-                    <div id="ubb">Usage Based Billing</div>
-                    <div id="ia">Invoicing Automation</div>
-                    <div id="quot">Quotes</div>
-                    <div id="pror">Proration</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Usage Based Billing</div>
+                    <div class="hover">Invoicing Automation</div>
+                    <div class="hover">Quotes</div>
+                    <div class="hover">Proration</div>
                 </div>
                 <div>
                     <div>Recurring Payments</div>
-                    <div id="ovrview">Overview</div>
-                    <div id="mpt">Multiple Payment Methods</div>
-                    <div id="mpg">Multiple Payment Gateways</div>
-                    <div id="sd">Smart Dunning</div>
-                    <div id="cm">Chargeback Management</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Multiple Payment Methods</div>
+                    <div class="hover">Multiple Payment Gateways</div>
+                    <div class="hover">Smart Dunning</div>
+                    <div class="hover">Chargeback Management</div>
                 </div>
                 <div>
                     <div>Accounting & Taxes</div>
-                    <div id="ovrv">Overview</div>
-                    <div id="rr">Revenue Recognition</div>
-                    <div id="mst">Manage Sales Tax</div>
-                    <div id="ocr">One-Click Reconciliation</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Revenue Recognition</div>
+                    <div class="hover">Manage Sales Tax</div>
+                    <div class="hover">One-Click Reconciliation</div>
                 </div>
                 <div>
                     <div>Reporting & Analytics</div>
-                    <div id="ovrvw">Overview</div>
-                    <div id="drr">Deferred Revenue Reporting</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Deferred Revenue Reporting</div>
                 </div>
             </div>
         </div>
@@ -84,38 +84,38 @@
             <div class="dropdown_content display_flex  drop_sol">
                 <div>
                     <div>By Role</div>
-                    <div id="h_fin">Finance</div>
-                    <div id="h_sale">Sales</div>
-                    <div id="h_rev">RevOps</div>
+                    <div class="hover">Finance</div>
+                    <div class="hover">Sales</div>
+                    <div class="hover">RevOps</div>
                 </div>
                 <div>
                     <div>By Industry</div>
-                    <div id="h_b3b">B2B SaaS</div>
-                    <div id="h_ecom">Ecommerce</div>
-                    <div id="h_elrn">E-learning</div>
-                    <div id="h_pub">Publishing</div>
+                    <div class="hover">B2B SaaS</div>
+                    <div class="hover">Ecommerce</div>
+                    <div class="hover">E-learning</div>
+                    <div class="hover">Publishing</div>
                 </div>
                 <div>
                     <div>By Strategy</div>
-                    <div id="h_ronp">Roll Out New Pricing</div>
-                    <div id="h_eg">Expand Globally</div>
-                    <div id="h_mu">Move Upmarket</div>
-                    <div id="h_sts">Shift to Subscriptions</div>
+                    <div class="hover">Roll Out New Pricing</div>
+                    <div class="hover">Expand Globally</div>
+                    <div class="hover">Move Upmarket</div>
+                    <div class="hover">Shift to Subscriptions</div>
                 </div>
                 <div>
                     <div>By Business Size</div>
-                    <div id="h_sup">Startup</div>
-                    <div id="h_sclup">ScaleUp</div>
-                    <div id="h_entrp">Enterprise</div>
+                    <div class="hover">Startup</div>
+                    <div class="hover">ScaleUp</div>
+                    <div class="hover">Enterprise</div>
                 </div>
                 <div>
                     <div>By Business Model</div>
-                    <div id="h_ss">Self-serve</div>
-                    <div id="h_sd">Sales-driven</div>
+                    <div class="hover">Self-serve</div>
+                    <div class="hover">Sales-driven</div>
                 </div>
                 <div>
                     <div>By Geography</div>
-                    <div id="h_eur">Europe</div>
+                    <div class="hover">Europe</div>
                 </div>
             </div>
         </div>
@@ -511,50 +511,50 @@
                     <p>Product</p>
                     <i class="fi-rr-angle-small-right arrow"></i>
                 </div>
-                <div id="subs">Subscription Management</div>
-                <div id="rec_bill">Recurring Billing and Invoicing</div>
-                <div id="rec_pay">Recurring Payments</div>
-                <div id="acc">Accounting and Taxes</div>
-                <div id="saas">SaaS Reporting</div>
-                <div id="enter">Enterprise Billing</div>
-                <div id="int">Integrations</div>
+                <div class="hover">Subscription Management</div>
+                <div class="hover">Recurring Billing and Invoicing</div>
+                <div class="hover">Recurring Payments</div>
+                <div class="hover">Accounting and Taxes</div>
+                <div class="hover">SaaS Reporting</div>
+                <div class="hover">Enterprise Billing</div>
+                <div class="hover">Integrations</div>
             </div>
             <div>
                 <div class="display_flex">
                     <p>Help & Support</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
-                <div id="sec">Security</div>
-                <div id="faq">FAQs</div>
-                <div id="stat">Status</div>
-                <div id="product_d">Product Documentation</div>
-                <div id="api">API Documentation</div>
-                <div id="support">Supported Payment Gateways</div>
-                <div id="site">Sitemap</div>
+                <div class="hover">Security</div>
+                <div class="hover">FAQs</div>
+                <div class="hover">Status</div>
+                <div class="hover">Product Documentation</div>
+                <div class="hover">API Documentation</div>
+                <div class="hover">Supported Payment Gateways</div>
+                <div class="hover">Sitemap</div>
             </div>
             <div>
                 <div class="display_flex">
                     <p>Resources</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
-                <div id="blog">Blog</div>
-                <div id="compare">Compare Payment Gateways</div>
-                <div id="tackle">Tackling Payment Failures</div>
-                <div id="enter_bill">Enterprise Billing Guide</div>
-                <div id="web">Webinars</div>
-                <div id="gloss">Glossaries</div>
+                <div class="hover">Blog</div>
+                <div class="hover">Compare Payment Gateways</div>
+                <div class="hover">Tackling Payment Failures</div>
+                <div class="hover">Enterprise Billing Guide</div>
+                <div class="hover">Webinars</div>
+                <div class="hover">Glossaries</div>
             </div>
             <div>
                 <div class="display_flex">
                     <p>Company</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
-                <div id="customers">Customers</div>
-                <div id="partner">Partners</div>
-                <div id="career">Careers</div>
-                <div id="press">Press</div>
-                <div id="terms">Terms</div>
-                <div id="privacy">Privacy</div>
+                <div class="hover">Customers</div>
+                <div class="hover">Partners</div>
+                <div class="hover">Careers</div>
+                <div class="hover">Press</div>
+                <div class="hover">Terms</div>
+                <div class="hover">Privacy</div>
             </div>
         </div>
 
