--- a/pricing.html
+++ b/pricing.html
@@ -44,79 +44,82 @@
             <div class="dropdown_content display_flex">
                 <div>
                     <div>Subscription Management</div>
-                    <div>Overview</div>
-                    <div>Create & Manage Plans</div>
-                    <div>Pricing Management</div>
-                    <div>Handle Trial Subscriptions</div>
-                    <div>Customer Self-service Portal</div>
-                    <div>Mobile Solutions</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Create & Manage Plans</div>
+                    <div class="hover">Pricing Management</div>
+                    <div class="hover">Handle Trial Subscriptions</div>
+                    <div class="hover">Customer Self-service Portal</div>
+                    <div class="hover">Mobile Solutions</div>
                 </div>
                 <div>
                     <div>Billing Automation</div>
-                    <div>Overview</div>
-                    <div>Usage Based Billing</div>
-                    <div>Invoicing Automation</div>
-                    <div>Quotes</div>
-                    <div>Proration</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Usage Based Billing</div>
+                    <div class="hover">Invoicing Automation</div>
+                    <div class="hover">Quotes</div>
+                    <div class="hover">Proration</div>
                 </div>
                 <div>
                     <div>Recurring Payments</div>
-                    <div>Overview</div>
-                    <div>Multiple Payment Methods</div>
-                    <div>Multiple Payment Gateways</div>
-                    <div>Smart Dunning</div>
-                    <div>Chargeback Management</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Multiple Payment Methods</div>
+                    <div class="hover">Multiple Payment Gateways</div>
+                    <div class="hover">Smart Dunning</div>
+                    <div class="hover">Chargeback Management</div>
                 </div>
                 <div>
                     <div>Accounting & Taxes</div>
-                    <div>Overview</div>
-                    <div>Revenue Recognition</div>
-                    <div>Manage Sales Tax</div>
-                    <div>One-Click Reconciliation</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Revenue Recognition</div>
+                    <div class="hover">Manage Sales Tax</div>
+                    <div class="hover">One-Click Reconciliation</div>
                 </div>
                 <div>
                     <div>Reporting & Analytics</div>
-                    <div>Overview</div>
-                    <div>Deferred Revenue Reporting</div>
+                    <div class="hover">Overview</div>
+                    <div class="hover">Deferred Revenue Reporting</div>
                 </div>
             </div>
         </div>
+
+        <!--  -->
+
         <div class="header_dropdown_solutions">
             <div class="dropdown_content display_flex  drop_sol">
                 <div>
                     <div>By Role</div>
-                    <div>Finance</div>
-                    <div>Sales</div>
-                    <div>RevOps</div>
+                    <div class="hover">Finance</div>
+                    <div class="hover">Sales</div>
+                    <div class="hover">RevOps</div>
                 </div>
                 <div>
                     <div>By Industry</div>
-                    <div>B2B SaaS</div>
-                    <div>Ecommerce</div>
-                    <div>E-learning</div>
-                    <div>Publishing</div>
+                    <div class="hover">B2B SaaS</div>
+                    <div class="hover">Ecommerce</div>
+                    <div class="hover">E-learning</div>
+                    <div class="hover">Publishing</div>
                 </div>
                 <div>
                     <div>By Strategy</div>
-                    <div>Roll Out New Pricing</div>
-                    <div>Expand Globally</div>
-                    <div>Move Upmarket</div>
-                    <div>Shift to Subscriptions</div>
+                    <div class="hover">Roll Out New Pricing</div>
+                    <div class="hover">Expand Globally</div>
+                    <div class="hover">Move Upmarket</div>
+                    <div class="hover">Shift to Subscriptions</div>
                 </div>
                 <div>
                     <div>By Business Size</div>
-                    <div>Startup</div>
-                    <div>ScaleUp</div>
-                    <div>Enterprise</div>
+                    <div class="hover">Startup</div>
+                    <div class="hover">ScaleUp</div>
+                    <div class="hover">Enterprise</div>
                 </div>
                 <div>
                     <div>By Business Model</div>
-                    <div>Self-serve</div>
-                    <div>Sales-driven</div>
+                    <div class="hover">Self-serve</div>
+                    <div class="hover">Sales-driven</div>
                 </div>
                 <div>
                     <div>By Geography</div>
-                    <div>Europe</div>
+                    <div class="hover">Europe</div>
                 </div>
             </div>
         </div>
@@ -482,58 +485,59 @@
 
         <div id="foot">
                 <hr/>
-            <div class="comp_services display_flex">
+                <div class="comp_services display_flex">
                 <div>
                     <div class="display_flex">
                         <p>Product</p>
                         <i class="fi-rr-angle-small-right arrow"></i>
                     </div>
-                    <div id="subs">Subscription Management</div>
-                    <div id="rec_bill">Recurring Billing and Invoicing</div>
-                    <div id="rec_pay">Recurring Payments</div>
-                    <div id="acc">Accounting and Taxes</div>
-                    <div id="saas">SaaS Reporting</div>
-                    <div id="enter">Enterprise Billing</div>
-                    <div id="int">Integrations</div>
+                    <div class="hover">Subscription Management</div>
+                    <div class="hover">Recurring Billing and Invoicing</div>
+                    <div class="hover">Recurring Payments</div>
+                    <div class="hover">Accounting and Taxes</div>
+                    <div class="hover">SaaS Reporting</div>
+                    <div class="hover">Enterprise Billing</div>
+                    <div class="hover">Integrations</div>
                 </div>
                 <div>
                     <div class="display_flex">
                         <p>Help & Support</p>
                         <i class="fi-rr-angle-small-right"></i>
                     </div>
-                    <div id="sec">Security</div>
-                    <div id="faq">FAQs</div>
-                    <div id="stat">Status</div>
-                    <div id="product_d">Product Documentation</div>
-                    <div id="api">API Documentation</div>
-                    <div id="support">Supported Payment Gateways</div>
-                    <div id="site">Sitemap</div>
+                    <div class="hover">Security</div>
+                    <div class="hover">FAQs</div>
+                    <div class="hover">Status</div>
+                    <div class="hover">Product Documentation</div>
+                    <div class="hover">API Documentation</div>
+                    <div class="hover">Supported Payment Gateways</div>
+                    <div class="hover">Sitemap</div>
                 </div>
                 <div>
                     <div class="display_flex">
                         <p>Resources</p>
                         <i class="fi-rr-angle-small-right"></i>
                     </div>
-                    <div id="blog">Blog</div>
-                    <div id="compare">Compare Payment Gateways</div>
-                    <div id="tackle">Tackling Payment Failures</div>
-                    <div id="enter_bill">Enterprise Billing Guide</div>
-                    <div id="web">Webinars</div>
-                    <div id="gloss">Glossaries</div>
+                    <div class="hover">Blog</div>
+                    <div class="hover">Compare Payment Gateways</div>
+                    <div class="hover">Tackling Payment Failures</div>
+                    <div class="hover">Enterprise Billing Guide</div>
+                    <div class="hover">Webinars</div>
+                    <div class="hover">Glossaries</div>
                 </div>
                 <div>
                     <div class="display_flex">
                         <p>Company</p>
                         <i class="fi-rr-angle-small-right"></i>
                     </div>
-                    <div id="customers">Customers</div>
-                    <div id="partner">Partners</div>
-                    <div id="career">Careers</div>
-                    <div id="press">Press</div>
-                    <div id="terms">Terms</div>
-                    <div id="privacy">Privacy</div>
+                    <div class="hover">Customers</div>
+                    <div class="hover">Partners</div>
+                    <div class="hover">Careers</div>
+                    <div class="hover">Press</div>
+                    <div class="hover">Terms</div>
+                    <div class="hover">Privacy</div>
                 </div>
             </div>
+
             <div id="footer">
                 <div>
                     <img class="logo" src="https://www.chargebee.com/static/resources/brand/chargebee-logo-black.svg" />
