few touches with arrows

--- a/landing_page.html
+++ b/landing_page.html
@@ -22,12 +22,16 @@
                 <div class="login_demo display_flex">
                     <div class="display_flex schedule schedule_orange">
                         <p class="demo"><a href="demo.html">Schedule a Demo</a></p>
-                        <i class="fi-rr-angle-small-right demo"></i>
+                        <i class="fi-rr-angle-small-right sch_nav_angle"></i>
+                            <i class="fi-rr-arrow-small-right sch_nav_arrow"></i>
                     </div>
                     <div class="display_flex login">
                         <div><i class="fi-sr-lock"></i></div>
                         <div><a href="login.html">Login</a></div>
-                        <div><i class="fi-rr-angle-small-right"></i></div>
+                        <div>
+                            <i class="fi-rr-angle-small-right login_angle"></i>
+                            <i class="fi-rr-arrow-small-right login_arrow"></i>
+                        </div>
                     </div>
                 </div>
                 <div></div>
@@ -212,9 +216,9 @@
             <div class="sch_signup_btn display_flex">
                 <div class="display_flex schedule schedule_purple">
                     <p><a href="demo.html">Schedule a Demo</a></p>
-                    <i class="fi-rr-arrow-small-right"></i>
+                    <i class="fi-rr-arrow-small-right arr_purp"></i>
                 </div>
-                <div class="display_flex">
+                <div class="display_flex sign_up">
                     <p>Sign up for free</p>
                     <i class="fi-rr-arrow-small-right sign_i"></i>
                 </div>
@@ -251,9 +255,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="display_flex learn_more">
+                    <div class="display_flex learn_more lm_a">
                         <a href="learn-more.html"><p>Learn more</p></a>
-                        <i class="fi-rr-arrow-small-right"></i>
+                        <i class="fi-rr-arrow-small-right lma"></i>
                     </div>
                 </div>
                 <div class="automate_img">
@@ -290,9 +294,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="display_flex learn_more">
+                    <div class="display_flex learn_more lm_ssm">
                         <a href="learn-more.html"><p>Learn more</p></a>
-                        <i class="fi-rr-arrow-small-right"></i>
+                        <i class="fi-rr-arrow-small-right lmssm"></i>
                     </div>
                 </div>
             </div>
@@ -323,9 +327,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="display_flex learn_more">
+                    <div class="display_flex learn_more lm_saas">
                         <a href="learn-more.html"><p>Learn more</p></a>
-                        <i class="fi-rr-arrow-small-right"></i>
+                        <i class="fi-rr-arrow-small-right lmsaas"></i>
                     </div>
                 </div>
                 <div class="automate_img">
@@ -362,9 +366,9 @@
                         <img src="https://webstatic.chargebee.com/assets/web/352/images/home/lemon/crm-logos.png" />
                     </div>
                     <p class="text_det_col">Handle quotes, approvals, acceptance, and collections seamlessly from within the CRM.</p>
-                    <div class="display_flex learn_more learn_details">
+                    <div class="display_flex learn_more learn_details bl_qtc">
                         <a href="learn-more.html"><p>Learn more</p></a>
-                        <i class="fi-rr-arrow-small-right"></i>
+                        <i class="fi-rr-arrow-small-right blqtc"></i>
                     </div>
                 </div>
                 <div class="details_right details_c">
@@ -378,9 +382,9 @@
                         <img src="https://webstatic.chargebee.com/assets/web/352/images/home/lemon/pg-logos.png" />
                     </div>
                     <p class="text_det_col">Accept payments across a wide array of gateways, geographies, and currencies.</p>
-                    <div class="display_flex learn_more learn_details">
+                    <div class="display_flex learn_more learn_details bl_ompm">
                         <a href="learn-more.html"><p>Learn more</p></a>
-                        <i class="fi-rr-arrow-small-right"></i>
+                        <i class="fi-rr-arrow-small-right blompm"></i>
                     </div>
                 </div>
             </div>
@@ -391,9 +395,9 @@
                     <img src="https://webstatic.chargebee.com/assets/web/352/images/home/lemon/crm-logos.png" />
                 </div>
                 <p class="text_det_col">Reconcile books in seconds, handle compliance, and recognize revenue painlessly.</p>
-                <div class="display_flex learn_more learn_details">
+                <div class="display_flex learn_more learn_details bl_sfo">
                     <a href="learn-more.html"><p>Learn more</p></a>
-                    <i class="fi-rr-arrow-small-right"></i>
+                    <i class="fi-rr-arrow-small-right blsfo"></i>
                 </div>
             </div>
             <div class="color_base display_flex">
@@ -402,7 +406,7 @@
                 </div>
                 <div class="display_flex schedule head_sch">
                     <p><a href="demo.html">Schedule a Demo</a></p>
-                    <i class="fi-rr-arrow-small-right"></i>
+                    <i class="fi-rr-arrow-small-right h_sch_i"></i>
                 </div>
             </div>
             <div id="base_line"></div>
@@ -496,9 +500,10 @@
 
         <div class="display_flex bottom_head">
             <h5>Still unsure? Step Inside and See What The Future Looks Like.</h5>
-            <div class="display_flex schedule head_sch">
+            <div class="display_flex schedule head_sch btm_sch">
                 <p><a href="demo.html">Schedule a Demo</a></p>
-                <i class="fi-rr-angle-small-right"></i>
+                <i class="fi-rr-angle-small-right btm_sch_angle"></i>
+                <i class="fi-rr-arrow-small-right btm_sch_arrow"></i>
             </div>
         </div>
         <hr/>
@@ -507,7 +512,7 @@
         
         <div class="comp_services display_flex">
             <div>
-                <div class="display_flex">
+                <div id="product" class="display_flex">
                     <p>Product</p>
                     <i class="fi-rr-angle-small-right arrow"></i>
                 </div>
@@ -520,7 +525,7 @@
                 <div class="hover">Integrations</div>
             </div>
             <div>
-                <div class="display_flex">
+                <div id="help" class="display_flex">
                     <p>Help & Support</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
@@ -533,7 +538,7 @@
                 <div class="hover">Sitemap</div>
             </div>
             <div>
-                <div class="display_flex">
+                <div id="resources" class="display_flex">
                     <p>Resources</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
@@ -545,7 +550,7 @@
                 <div class="hover">Glossaries</div>
             </div>
             <div>
-                <div class="display_flex">
+                <div id="company" class="display_flex">
                     <p>Company</p>
                     <i class="fi-rr-angle-small-right"></i>
                 </div>
